--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "babel-friulan.doc.tar.xz": f10180b2ef09990f9ed91a82517637f6cc4e637a
-  "babel-friulan.source.tar.xz": ed5335dcf4df436fc1c72de8b3bd67b421962005
-  "babel-friulan.tar.xz": 20015b9db38964bfeecb6a7fd83bf76976814667
+  babel-friulan.doc.tar.xz: 33f178126467dc74580d051e0e0a45d8840f9c2d
+  babel-friulan.source.tar.xz: 669562b29d458204efc3bb939086c652703bc950
+  babel-friulan.tar.xz: e7718eaa5635a61a028090f836f636020a35ff29
